// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontMaxSize renders 0 1`] = `
Array [
  .c0 {
  font-max-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontMaxSize renders function 1`] = `
Array [
  .c0 {
  font-max-size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontMaxSize renders invalid theme path 1`] = `
Array [
  .c0 {
  font-max-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontMaxSize renders negative number 1`] = `
Array [
  .c0 {
  font-max-size: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontMaxSize renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-max-size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-max-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-max-size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-max-size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-max-size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-max-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-max-size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-max-size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-max-size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-max-size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-max-size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-max-size: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-max-size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-max-size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-max-size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-max-size: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontMaxSize renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    font-max-size: July;
  }
}

@media April {
  .c0 {
    font-max-size: August;
  }
}

@media January {
  .c0 {
    font-max-size: September;
  }
}

@media April {
  .c0 {
    font-max-size: November;
  }
}

@media June {
  .c0 {
    font-max-size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-max-size: July;
  }
}

@media April {
  .c0 {
    font-max-size: August;
  }
}

@media January {
  .c0 {
    font-max-size: September;
  }
}

@media April {
  .c0 {
    font-max-size: November;
  }
}

@media June {
  .c0 {
    font-max-size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-max-size: January;
  }
}

@media April {
  .c0 {
    font-max-size: December;
  }
}

@media January {
  .c0 {
    font-max-size: April;
  }
}

@media April {
  .c0 {
    font-max-size: May;
  }
}

@media June {
  .c0 {
    font-max-size: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-max-size: January;
  }
}

@media April {
  .c0 {
    font-max-size: December;
  }
}

@media January {
  .c0 {
    font-max-size: April;
  }
}

@media April {
  .c0 {
    font-max-size: May;
  }
}

@media June {
  .c0 {
    font-max-size: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontMaxSize renders postitive number 1`] = `
Array [
  .c0 {
  font-max-size: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontMaxSize renders string 1`] = `
Array [
  .c0 {
  font-max-size: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontMaxSize renders valid theme path 1`] = `
Array [
  .c0 {
  font-max-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-max-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
